--- a/crates/semifold/assets/semifold-ci.yaml.jinja
+++ b/crates/semifold/assets/semifold-ci.yaml.jinja
@@ -20,14 +20,11 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      - name: Cache rust artifacts
-        uses: Swatinem/rust-cache@v2
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-      - name: Install Semifold
-        run: cargo install semifold
+      - name: Setup Semifold
+        uses: noctisynth/setup-semifold@main
       - name: Semifold CI
         run: semifold ci
         env:
-          GITHUB_TOKEN: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
-          CARGO_REGISTRY_TOKEN: {% raw %}${{ secrets.CARGO_REGISTRY_TOKEN }}{% endraw %}
+          GITHUB_TOKEN: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}{% if 'rust' in resolvers %}
+          CARGO_REGISTRY_TOKEN: {% raw %}${{ secrets.CARGO_REGISTRY_TOKEN }}{% endraw %}{% endif %}{% if 'nodejs' in resolvers %}
+          NODE_AUTH_TOKEN: {% raw %}${{ secrets.NODE_AUTH_TOKEN }}{% endraw %}{% endif %}
